# radae

./: CMakeLists.txt  C_RX_MIGRATION.md  README.md  analog_bbfm.sh  autocorr.py  check_snr_est.py  est_CNo.py  est_snr.py  est_snr_curves.sh  evaluate.sh  export_frame_sync_weights.py  export_rade_weights.py  export_rade_weights_250725.py  export_rx2_model_data.py  export_tx2_model_data.py  generate_complex_bpf_vectors.py  generate_frame_sync_vectors.py  generate_rade_rx_v2_vectors.py  generate_rx2_coarse_sync_vectors.py  generate_rx2_demod_vectors.py  generate_rx2_eoo_vectors.py  generate_rx2_frame_sync_vectors.py  generate_rx2_frontend_vectors.py  generate_rx2_receiver_vectors.py  generate_tx2_encode_vectors.py  generate_tx2_encode_vectors_via_v2.py  inference.py  inject_bad_pitch.py  int16tof32.py  jmv_ft.sh  ota_test.sh  radae_plots.m  radae_rxe.py  radae_rxe2.py  radae_txe.py  radae_txe2.py  radae_v2.py  rx2.py  rx2.sh  train_ft_sync.sh  (+3 more)
.github/workflows/: run_ctest.yml
cmake/: BuildOpus.cmake
doc/: radev1_psd-inc.eps  radev1_psd.tex  radev2_psd-inc.eps  radev2_psd.tex  v2_snr_est-inc.eps  v2_snr_est.tex  v2_test_report.tex
docs/: C_TX_MIGRATION.md
radae/: dsp.py  radae.py  radae_base.py
src/: CMakeLists.txt  complex_bpf.c  complex_bpf.h  frame_sync.c  frame_sync.h  frame_sync_data.c  frame_sync_data.h  radae_rx_v2.c  radae_tx_v2.c  rade_api.c  rade_api.h  rade_api_pure_c.c  rade_constants.h  rade_dec.c  rade_dec_data.h  rade_enc_data.h  rx2_coarse_sync.c  rx2_coarse_sync.h  rx2_demod.c  rx2_demod.h  rx2_eoo.c  rx2_eoo.h  rx2_frame_sync.c  rx2_frame_sync.h  rx2_frontend.c  rx2_frontend.h  rx2_model_data.c  rx2_model_data.h  rx2_receiver.c  rx2_receiver.h  test_complex_bpf.c  test_frame_sync.c  test_rade_dec.c  test_rade_enc.c  test_rade_rx_v2.c  test_rx2_coarse_sync.c  test_rx2_demod.c  test_rx2_eoo.c  test_rx2_frame_sync.c  test_rx2_frontend.c  (+6 more)
test/: check_snr.py  chirp_mpp.sh  eoo_detect_prob.sh  eoo_false_prob.sh  make_g.sh  ota_test_cal.sh  radae_nopy_ber_awgn.sh  radae_nopy_ber_mpp.sh  snr_est_test.sh  v2_acq.sh  v2_spot.sh  v2_spot_c_rx.sh  v2_test_wav.sh  v2_timing.sh
